// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicUsageExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`ControlledExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    点击
  </button>
</DocumentFragment>
`;

exports[`PlacementsExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Left
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Top
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Bottom
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Right
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Left
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Left
  </button>
</DocumentFragment>
`;

exports[`TriggersExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Hover me
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Focus me
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Click me
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Right Click me
  </button>
</DocumentFragment>
`;
